# sputnik_experimental

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: Dependencies.cmake
codegen/: codegen.py  emit_gen_op_cmakelists.py  emit_op_src_file.py  kernel_specification.py  utils.py
sputnik/: CMakeLists.txt  load_store.h  load_store_atomic.h
sputnik/custom_sddmm/: CMakeLists.txt  all_reduce.h  custom_sddmm_benchmark.cu.cc  dense_to_shared.h
sputnik/custom_spmm/: CMakeLists.txt  compute_utils.h  custom_spmm_benchmark.cu.cc  dense_tile.h  predicate_utils.h
sputnik/depthwise/: depthwise_test.cu.cc  shape_utils.h
sputnik/sddmm/: cuda_sddmm.cu.cc  output_tile_atomic.h
sputnik/spmm/: CMakeLists.txt  cuda_spmm.cu.cc  output_tile.h  output_tile_atomic.h
